Update extension to work in Visual Studio 2022

--- a/AutoT4MVC/packages.config
+++ b/AutoT4MVC/packages.config
@@ -1,8 +1,52 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rx-Core" version="2.0.21114" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.0.21114" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.0.21114" targetFramework="net45" />
-  <package id="Rx-Main" version="2.0.21114" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.0.21114" targetFramework="net45" />
+  <package id="MessagePack" version="2.4.14-alpha" targetFramework="net472" />
+  <package id="MessagePack.Annotations" version="2.4.14-alpha" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.NET.StringTools" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.ServiceHub.Analyzers" version="3.1.2036" targetFramework="net472" />
+  <package id="Microsoft.ServiceHub.Client" version="3.1.2036" targetFramework="net472" />
+  <package id="Microsoft.ServiceHub.Framework" version="3.1.2036" targetFramework="net472" />
+  <package id="Microsoft.ServiceHub.Resources" version="3.1.2036" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.RemoteControl" version="16.3.44" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.RpcContracts" version="17.1.13" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Telemetry" version="16.4.22" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Threading" version="17.1.46" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="17.1.46" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Utilities" version="17.1.32210.191" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Utilities.Internal" version="16.3.36" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Validation" version="17.0.43" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="Nerdbank.Streams" version="2.9.47-alpha" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Rx-Core" version="2.0.21114" targetFramework="net472" />
+  <package id="Rx-Interfaces" version="2.0.21114" targetFramework="net472" />
+  <package id="Rx-Linq" version="2.0.21114" targetFramework="net472" />
+  <package id="Rx-Main" version="2.0.21114" targetFramework="net472" />
+  <package id="Rx-PlatformServices" version="2.0.21114" targetFramework="net472" />
+  <package id="StreamJsonRpc" version="2.10.44" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.ComponentModel.Composition" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.2-mauipre.1.22102.15" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.Threading.AccessControl" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Dataflow" version="7.0.0-preview.2.22152.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
